doc/themes/the-things-stack/assets/css/pages/homepage.scss
.section-doc-home-page-hero {
  background-color: var(--c-background-02)
}

.container-whats-new-list {
  background-color: var(--c-tts-primary-050)
}

.container-doc-home-page-browse {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.container-doc-home-page-cards {
  height: 100%;
}

.section-whats-new {
  background-color: var(--c-background-01);
}

.whats-new-separation-line {
  height:1px;
  width: 100%;
  background-color: var(--c-tts-primary-200)
}

.whats-new-hero-card {
  background-image: url(/img/doc-pattern.png);
  background-repeat: no-repeat;
  background-size: 160%;
  background-position: center;
  transition: all .2s ease-in-out;
}

.whats-new-hero-card:hover {
  transform: translateY(-2px);
  box-shadow: 0px 2.7px 5.3px rgba(0, 0, 0, 0.02), 0px 8.9px 17.9px rgba(0, 0, 0, 0.03), 0px 40px 80px rgba(0, 0, 0, 0.05);
}

.container-whats-new {
  background-color: var(--c-tts-primary-dark);
  box-shadow: 0px 2.7px 5.3px rgba(0, 0, 0, 0.04), 0px 8.9px 17.9px rgba(0, 0, 0, 0.06), 0px 40px 80px rgba(0, 0, 0, 0.1);
  background-image: url(/img/doc-pattern.png);
  background-repeat: no-repeat;
  background-size: 160%;
  background-position: center;
}

.item-whats-new {
  background-color: #001141;
  transition: all .2s ease-in-out;
}

.item-whats-new:hover {
  background-color: #000d32;
  transform: translateY(-2px);
}

